resources/sass/_tournament.scss
.map-selection{
    display: flex;
    flex-flow: row wrap;
    > div{
        flex: 0;
        padding: 5px;
        margin-right: 5px;
        margin-top: 5px;
        cursor: pointer;
        transition: all 300ms;
        label{
            cursor: pointer;
            position: relative;
        }
        &.my-ban,
        &.their-ban{
            label::before{
                content: "\F00D";
                position: absolute;
                width: 100%;
                left: -16px;
                top: -39px;
                opacity: 0.7;
                height: 100%;
                font-size: 170px;
                font-family: "FontAwesome";
                text-align: center;
                color: green;
            }
        }
        &.their-ban{
            label::before{
                color: red;
            }
        }
        &.active{
            background-color: #ccc;
        }
    }
}
#modal-new-tournament{
    .el-select{
        width: 100%;
    }
}

